alert management table filter reset button issue cleard and generation settings three dots hovering issue cleared and current shift performance circle graph hovering issue cleared and production quality filter issue cleared and dropdown  selection issue cleared

--- a/assets/css/alert_settings.css
+++ b/assets/css/alert_settings.css
@@ -24,7 +24,7 @@
     color: white;
     /* width:6rem;
     text-align:center; */
-    margin-top: 0.5rem;
+    margin-top: 0.2rem;
     margin-right: 0.6rem;
     height: 2.2rem;
     cursor: pointer;
